--- a/src/app/service-page/components/ngx-gallery/ngx-gallery.component.scss
+++ b/src/app/service-page/components/ngx-gallery/ngx-gallery.component.scss
@@ -4,9 +4,9 @@
   ::ng-deep ngx-gallery-image{
     border: 1px solid #F2F5FB;
     box-sizing: border-box;
-    &.ngx-gallery-active{
-      z-index: 1;
-    }
+  }
+  ::ng-deep .ngx-gallery-image.ngx-gallery-active{
+    z-index: 1;
   }
   ::ng-deep .ngx-gallery-arrow-wrapper{
     width: 41px;
@@ -71,11 +71,11 @@
     background-size: auto;
     height: 56px;
     width: 56px;
-    top: 1px;
-    right: 70px;
+    top: 15px;
+    right: 60px;
     border-radius: 7px;
     cursor: pointer;
-    z-index: 2000;
+    z-index: 2;
     img{
       position: absolute;
       top: 50%;
