--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <app-ngx-gallery *ngIf="offerData"></app-ngx-gallery>
+      <app-ngx-gallery [offerData]="offerData" *ngIf="offerData" ></app-ngx-gallery>
 
       <div class="about-offer">
         <h4>Описание услуги</h4>
@@ -238,16 +238,14 @@
 
       </section>
 
-      <app-service-page-questions></app-service-page-questions>
-      <app-service-page-about-offer></app-service-page-about-offer>
+      <app-service-page-questions [offerData]="offerData" *ngIf="offerData"></app-service-page-questions>
+      <app-service-page-about-offer [offerData]="offerData" *ngIf="offerData"></app-service-page-about-offer>
     </div>
     <div class="choose-packet">
       <div class="runing-block">
-        <app-service-page-packages></app-service-page-packages>
+        <app-service-page-packages [offerData]="offerData" *ngIf="offerData"></app-service-page-packages>
       </div>
     </div>
-    <div class="sliders-block">
-      Туть будут красивые слайдеры
-    </div>
+    <app-service-page-another-services [offerData]="offerData" *ngIf="offerData"></app-service-page-another-services>
   </div>
 </div>
