--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30%;
+    width: 32%;
     padding: 15px 0;
     cursor: pointer;
     position: relative;
@@ -51,6 +51,7 @@
     box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
     border-radius: 3px;
     display: flex;
+    flex-direction: column;
     padding: 40px 55px;
     // margin-bottom: 7px;
 
