--- a/src/app/service-page/components/service-page-questions/service-page-questions.component.scss
+++ b/src/app/service-page/components/service-page-questions/service-page-questions.component.scss
@@ -20,6 +20,11 @@
   border-bottom: 1px solid #e1e1e1;
 
   background-color: #F4F7FC;
+  // &.mat-expanded{
+  //   .question-item__title{
+  //     padding: 7px 20px 0;
+  //   }
+  // }
   &__title {
     position: relative;
     font-style: normal;
@@ -29,7 +34,7 @@
     color: #4E5051;
     margin: 0;
     cursor: pointer;
-    padding: 20px;
+    padding: 7px 20px 9px;
     // &::before {
     //   content: "";
     //   position: absolute;
@@ -39,20 +44,19 @@
     //   border-top: 6px solid #fff;
     //   transition: all 0.3s;
     // }
+
     .element-plus{
       color: #3a4046;
       position: absolute;
       top: 50%;
-      right: 56px;
+      right: 20px;
       transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
-      border: 1px solid #3a4046;
-      border-radius: 50%;
+      width: 25px;
+      height: 25px;
       cursor: pointer;
       &::after {
         content: "";
-        width: 8px;
+        width: 12px;
         height: 1px;
         background-color: #3a4046;
         transform: translate(-50%, -50%);
@@ -62,7 +66,7 @@
       }
       &::before {
         content: "";
-        width: 8px;
+        width: 12px;
         height: 1px;
         background-color: #3a4046;
         transform: translate(-50%, -50%) rotate(90deg);
@@ -79,45 +83,10 @@
     line-height: 23px;
     color: #4E5051;
     margin: 0;
-
-    padding: 0 100px 0 20px;
+    font-family: "Source Sans Pro", sans-serif;
+    // padding: 0 100px 0 20px;
     overflow: hidden;
     // transition: all 0.3s;
-  }
-  &.none {
-    .question-item__text {
-      height: 0;
-      opacity: 0;
-    }
-  }
-  &:nth-child(1) {
-    &.active {
-      .question-item__text {
-        // height: 130px;
-        animation: tabAnimation 0.3s;
-      }
-    }
-  }
-  &:nth-child(2) {
-    &.active {
-      .question-item__text {
-        height: 130px;
-      }
-    }
-  }
-  &:nth-child(3) {
-    &.active {
-      .question-item__text {
-        height: 130px;
-      }
-    }
-  }
-  &:nth-child(4) {
-    &.active {
-      .question-item__text {
-        height: 130px;
-      }
-    }
   }
   &.active {
     .question-item__title {
@@ -128,24 +97,36 @@
     .question-item__text {
       // opacity: 0.8;
     }
-    .element-plus{
-      &::before{
-        transform: translate(-50%, -50%) rotate(0deg);
-      }
-    }
+
   }
   &:last-child {
     border-bottom: none;
   }
 }
 
-
-@keyframes tabAnimation {
-  from {
-    height: 0;
+.mat-expansion-panel-header{
+  font-family: "Source Sans Pro", sans-serif;
+}
+.mat-expansion-panel-header-title{
+  color: #4E5051;
+}
+.mat-expansion-panel-spacing{
+  margin: 0;
+  .element-plus{
+    &::before{
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
   }
-
-  to {
-    height: 100%;
+}
+.mat-expansion-panel-content{
+  font-family: "Source Sans Pro", sans-serif;
+}
+.mat-expansion-indicator{
+  display: none;
+  &::after{
+    display: none;
   }
+}
+.mat-expansion-indicator::after{
+  display: none!important;
 }
