service-creation(1-t && 2nd steps = compleated)
thisrd step required fields

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -321,3 +321,11 @@ quill-editor {
   border-color: #DCE0E6 !important;
 }
 }
+
+
+// ----------------error field
+
+.field-required {
+  // border: 1px solid #f44336;
+  box-shadow: inset 0 0 0 1px #f44336;
+}
