--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.scss
@@ -48,7 +48,12 @@ form::ng-deep {
     text-transform: uppercase;
     margin: 0 0 13px;
   }
+  .form-group.error {
+    quill-editor>div {
+      border-color: #FF647C !important;
+    }
 
+  }
   .mat-form-field-infix {
     border: none;
     padding: 0;
@@ -127,128 +132,128 @@ form::ng-deep {
     }
   }
 
-  .service-selects {
-    .mat-form-field-infix {
-      border-top: none;
-    }
+  // .service-selects {
+  //   .mat-form-field-infix {
+  //     border-top: none;
+  //   }
 
-    .mat-form-field-appearance-outline .mat-form-field-flex {
-      padding-left: 16px;
-    }
-  }
+  //   .mat-form-field-appearance-outline .mat-form-field-flex {
+  //     padding-left: 16px;
+  //   }
+  // }
 
-  .service-selects {
-    .mat-form-field {
-      &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
-        transform: none;
-      }
+  // .service-selects {
+  //   .mat-form-field {
+  //     &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
+  //       transform: none;
+  //     }
 
-      .mat-select-arrow {
-        border: none;
-        width: 24px;
-        height: 24px;
-        // background: #000;
-        position: relative;
+  //     .mat-select-arrow {
+  //       border: none;
+  //       width: 24px;
+  //       height: 24px;
+  //       // background: #000;
+  //       position: relative;
 
-        &:before {
-          content: "";
-          position: absolute;
-          width: 30%;
-          height: 30%;
-          border-bottom: 2px solid #000;
-          border-left: 2px solid #000;
-          transform: rotate(-45deg) translateY(50%);
-        }
-      }
+  //       &:before {
+  //         content: "";
+  //         position: absolute;
+  //         width: 30%;
+  //         height: 30%;
+  //         border-bottom: 2px solid #000;
+  //         border-left: 2px solid #000;
+  //         transform: rotate(-45deg) translateY(50%);
+  //       }
+  //     }
 
-      width: 100%;
+  //     width: 100%;
 
-      // &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
-      //   // color: #f44336;
-      //   div {
-      //     // color: #f44336;
-      //   }
-      // }
-      .mat-form-field-outline:first-of-type {
-        box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+  //     // &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
+  //     //   // color: #f44336;
+  //     //   div {
+  //     //     // color: #f44336;
+  //     //   }
+  //     // }
+  //     .mat-form-field-outline:first-of-type {
+  //       box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
 
-        div {
-          border-color: rgba(220, 224, 230, 0.1);
-        }
-      }
+  //       div {
+  //         border-color: rgba(220, 224, 230, 0.1);
+  //       }
+  //     }
 
-      .mat-form-field-outline-thick {
-        div {
-          border-width: 1px;
-          color: rgba(220, 224, 230, 0.1);
-          box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
-        }
-      }
+  //     .mat-form-field-outline-thick {
+  //       div {
+  //         border-width: 1px;
+  //         color: rgba(220, 224, 230, 0.1);
+  //         box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+  //       }
+  //     }
 
-      .mat-form-field-infix {
-        padding: 15px 0 10px 0;
-      }
+  //     .mat-form-field-infix {
+  //       padding: 15px 0 10px 0;
+  //     }
 
-      .ng-star-inserted {
-        // font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 21px;
-        color: #323c47;
+  //     .ng-star-inserted {
+  //       // font-style: normal;
+  //       font-weight: 400;
+  //       font-size: 14px;
+  //       line-height: 21px;
+  //       color: #323c47;
 
-        &.mat-error {
-          color: #f44336;
-        }
-      }
+  //       &.mat-error {
+  //         color: #f44336;
+  //       }
+  //     }
 
-      mat-select {
-        // border: 1px solid rgba(220, 224, 230, 0.1);
-        //
-        border-radius: 3px;
-        font-size: 16px;
-        line-height: 21px;
-        /* identical to box height, or 131% */
+  //     mat-select {
+  //       // border: 1px solid rgba(220, 224, 230, 0.1);
+  //       //
+  //       border-radius: 3px;
+  //       font-size: 16px;
+  //       line-height: 21px;
+  //       /* identical to box height, or 131% */
 
-        color: #323c47;
-      }
-    }
-  }
+  //       color: #323c47;
+  //     }
+  //   }
+  // }
 
-  .tags {
-    mat-form-field {
-      width: 100%;
-    }
-  }
+  // .tags {
+  //   mat-form-field {
+  //     width: 100%;
+  //   }
+  // }
 
 
 }
 
-::ng-deep .cdk-overlay-container {
-  .mat-option {
-    font-family: Source Sans Pro, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 21px;
-    /* identical to box height, or 131% */
+// ::ng-deep .cdk-overlay-container {
+//   .mat-option {
+//     font-family: Source Sans Pro, sans-serif;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 16px;
+//     line-height: 21px;
+//     /* identical to box height, or 131% */
 
-    color: #707683;
-  }
+//     color: #707683;
+//   }
 
-  .mat-option:hover:not(.mat-option-disabled),
-  .mat-option:focus:not(.mat-option-disabled) {
-    background: #3c7eea;
-    color: #fff;
-  }
+//   .mat-option:hover:not(.mat-option-disabled),
+//   .mat-option:focus:not(.mat-option-disabled) {
+//     background: #3c7eea;
+//     color: #fff;
+//   }
 
-  .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
-    // bg selected
-  }
+//   .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
+//     // bg selected
+//   }
 
-  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
-    color: #323c47;
-  }
-}
+//   .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+//     color: #323c47;
+//   }
+// }
 
 .service-selects {
   display: flex;
@@ -270,102 +275,6 @@ form::ng-deep {
   }
 }
 
-// ---------------------------file upload form ---------------------------
-// .portfolio {
-//   // display: flex;
-//   // flex-direction: row;
-//   // flex-wrap: wrap;
-
-// }
-// .load {
-
-// }
-.items {
-  display: flex;
-  flex-wrap: wrap;
-
-  img {
-    margin-right: 3%;
-    margin-bottom: 20px;
-    object-fit: contain;
-    &:nth-child(3n + 3) {
-      margin-right: 0;
-    }
-  }
-
-  img+.dr-dp {
-    width: 198px;
-    height: 198px;
-  }
-
-}
-
-.dr-dp {
-  text-align: center;
-  font-family: Source Sans Pro, sans-serif;
-  margin-bottom: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 213px;
-  border: 1px dashed #dce0e6;
-  position: relative;
-  z-index: 2;
-  object {
-    fill: red;
-  }
-
-  span {
-    display: block;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    /* identical to box height */
-    text-align: center;
-    color: #33596e;
-
-    &:first-of-type {
-      font-style: normal;
-      font-weight: bold;
-      font-size: 14px;
-      line-height: 18px;
-      /* identical to box height */
-      letter-spacing: -0.0841176px;
-      margin-bottom: 7px;
-    }
-  }
-}
-
-.portfolio {
-  img {
-    width: 198px;
-    height: 198px;
-    border: 2px dashed #DCE0E6;
-  }
-}
-
-.input-file {
-  width: 0.1px;
-  height: 0.1px;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  z-index: -1;
-
-  &+label {
-    cursor: pointer;
-    font-family: Source Sans Pro, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 33px;
-    text-align: center;
-    color: #3c7eea;
-  }
-
-}
 quill-editor::ng-deep {
   .ql-toolbar {
     background: #F4F7FC;
@@ -400,6 +309,7 @@ quill-editor::ng-deep {
       background: #fff;
       color: #4285F4;
       box-shadow: none;
+      padding: 15px 72px;
       &:hover {
         color: #fff;
         background: #3C7EEA;
