--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.scss
@@ -17,3 +17,16 @@
     }
   }
 }
+
+.secondary-extra-options ::ng-deep {
+  width: 100% !important;
+  .select-wrap-extra {
+    padding: 0 10px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .mat-select-trigger {
+    width: 100%;
+  }
+}
